# quick-phrases

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: category_commands.rs  clipboard_commands.rs  mod.rs  phrase_commands.rs  settings_commands.rs
src-tauri/src/models/: category.rs  mod.rs  phrase.rs  settings.rs
src-tauri/src/services/: clipboard.rs  mod.rs  settings_storage.rs  storage.rs
src/assets/styles/: global.css  tokens.css
src/components/: CategorySidebar.vue  CommandPalette.vue  CopyToast.vue  ImageViewer.vue  PhraseCard.vue  PhraseEditor.vue  SearchBar.vue  TitleBar.vue
src/composables/: useClipboard.ts  useSettings.ts  useTheme.ts
src/locales/: en.ts  zh-CN.ts  zh-TW.ts
src/stores/: categoryStore.ts  phraseStore.ts
src/types/: index.ts
src/utils/: index.ts
src/views/: HomeView.vue  SettingsView.vue
